--- a/docker-compose-airflow.yml
+++ b/docker-compose-airflow.yml
@@ -28,10 +28,10 @@ services:
       _PIP_ADDITIONAL_REQUIREMENTS: 'numpy==1.26.4 pandas==2.1.4 scikit-learn==1.3.2 xgboost==2.0.3 mlflow==2.9.2 joblib==1.4.2'
       _AIRFLOW_WWW_USER_USERNAME: admin
       _AIRFLOW_WWW_USER_PASSWORD: admin
-      AIRFLOW__WEBSERVER__WORKERS: "1"              # ✅ 1 worker (not 4)
-      AIRFLOW__WEBSERVER__WORKER_TIMEOUT: "120"     # ✅ 2min timeout
-      AIRFLOW__CORE__PARALLELISM: "4"               # ✅ Limit concurrent tasks
-      AIRFLOW__SCHEDULER__MIN_FILE_PROCESS_INTERVAL: "60"  # ✅ Reduce CPU
+      AIRFLOW__WEBSERVER__WORKERS: "1"              
+      AIRFLOW__WEBSERVER__WORKER_TIMEOUT: "120"     
+      AIRFLOW__CORE__PARALLELISM: "4"               
+      AIRFLOW__SCHEDULER__MIN_FILE_PROCESS_INTERVAL: "60"  
     volumes:
       - ./airflow/dags:/opt/airflow/dags
       - ./data:/opt/airflow/data
@@ -42,8 +42,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 4G                    # ✅ 4GB limit
-          cpus: '2.0'                   # ✅ 2 CPUs
+          memory: 4G                   
+          cpus: '2.0'                  
         reservations:
           memory: 2G
     command: bash -c "airflow db migrate && airflow users create --username admin --firstname Admin --lastname User --role Admin --email admin@example.com --password admin || true && airflow webserver"
