--- a/render.yml
+++ b/render.yml
@@ -1,6 +1,10 @@
 services:
   - type: web
-    name: churn-mlops-system
-    env: docker
+    name: churn-prediction
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port 8000 & streamlit run Streamlit_app.py --server.port=10000 --server.address=0.0.0.0"
     plan: free
-    autoDeploy: true
+    envVars:
+      - key: API_URL
+        value: "http://localhost:8000/predict"
