--- a/render.yml
+++ b/render.yml
@@ -3,7 +3,7 @@ services:
     name: churn-prediction
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port 8000 & streamlit run Streamlit_app.py --server.port=10000 --server.address=0.0.0.0"
+    startCommand: "uvicorn app.app:app --host 0.0.0.0 --port 8000 & streamlit run streamlit/app.py --server.port=10000 --server.address=0.0.0.0"
     plan: free
     envVars:
       - key: API_URL
